Golang/projects/unnamed_exporter/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unnamed-exporter
  namespace: tmp_monitoring
spec:
  rules:
    - host: to.be.changed.com
      http:
        paths:
          - path: /
            backend:
              serviceName: unnamed-exporter
              servicePort: 2113
